[Dell Inspiron 7370] External interfaces (BT, USB) show up in the sound output options but the sound keeps being emitted from the internal laptop speaker
Hello!
I recently filed a bug with Ubuntu 20.04 daily builds, and was told to submit another issue upstream, so here it is.
- Ubuntu version: focal dev
- Kernel version: 5.4.0-14-generic #17-Ubuntu SMP Thu Feb 6 22:47:59 UTC 2020
- Pulseaudio: 1:13.99.1-1ubuntu1
Steps to reproduce
- Connect an audio interface. I tried with BT headphones (TaoTronics) and speakers (UE Boom) as well as a USB microphone/output (Zoom H2n).
- Make sure it's the one selected as "Output device"
- Click "Test" -> the test sound outputs from the internal laptop speakers (Not OK)
- Select "Speakers - Built-in Audio" as Output device and click "Test" -> the test sound outputs from the internal laptop speakers (OK)
- Try to switch back to the external device and click Test -> same result as in step 3
Initial investigation
After some investigation using pactl, I found how to fix the issue, for both the USB audio interface and the Bluetooth speaker:
- Make sure the audio interface you want is connected (in my case, I connected both the USB and the Bluetooth speaker):
$ pactl list short sinks
1 alsa_output.pci-0000_00_1f.3.analog-stereo module-alsa-card.c s16le 2ch 48000Hz SUSPENDED
6 alsa_output.usb-ZOOM_Corporation_H2n_000000000000-00.iec958-stereo module-alsa-card.c s16le 2ch 44100Hz SUSPENDED
7 bluez_sink.88_C6_26_1A_9E_AF.a2dp_sink module-bluez5-device.c s16le 2ch 44100Hz SUSPENDED
- Play an audio stream, for instance a Youtube video. The output should come from the internal speakers, and can be seen in pactl as well:
$ pactl list short sink-inputs
10 1 16 protocol-native.c float32le 2ch 44100Hz
- Ask pactl to move the stream to the desired sink (output); for instance, the Bluetooth speaker:
$ pactl move-sink-input 10 7
-> The sound outputs to the Bluetooth device! \o/
However, going back to Sound Settings (where the "Output Device" shows my Bluetooth Speaker) and clicking Test still outputs to the internal speakers...
Additional comments
I was previously using Ubuntu 19.04 and Ubuntu 19.10 on this laptop, and never experienced this issue. I therefore believe this is a regression.
Please let me know what kind of logs would be useful to investigate this issue further.
Thanks!